adding in ordinaces routes and updating swagger
